# Correlation_Compressibility

./: .gitattributes  .gitignore  Dockerfile  Makefile  README.md  apples.csv  blocking_sensitivity.pbs  blocking_sensitivity.sh  combine.py  compression_mpi.pbs  compression_mpi.slurm  compression_mpi_jb.slurm  concat_output_script.py  database_parsing.py  functions_paper.R  import_script.py  jobs.pbs  notions.py  parse.py  prediction_evaluation_3Dblocksampling.R  process_script.py  process_script_mpi.py  setup.R  setup.sh  single_stat_script.py  spack.yaml
.spack-env/: view
analysis/: accuracy.R  boxplots.R  figures.R  functions_paper.R  heatmaps.R  init.R  init_functions.R  lineplots.R  misc.R  newMethods.R  prediction_evaluation_3Dblocksampling.R  scatterplots.R  statistics.R  stats_paper.R  testing.R  timing.R  timing_misc.R  verification.R
compress_package/: __init__.py  compare_compressors.py  data_plot.py  data_setup.py  gaussianprocess_2d_sampler.py  svd_coarsen.py  variogram_study.py
datasets/: README.md  qmcpack_split.py
outputs-old/: SDRBENCH-Miranda-256x384x384_blocks128_block_size12.csv  SDRBENCH-Miranda-256x384x384_blocks128_block_size16.csv  SDRBENCH-Miranda-256x384x384_blocks128_block_size24.csv  SDRBENCH-Miranda-256x384x384_blocks128_block_size32.csv  SDRBENCH-Miranda-256x384x384_blocks128_block_size4.csv  SDRBENCH-Miranda-256x384x384_blocks128_block_size6.csv  SDRBENCH-Miranda-256x384x384_blocks128_block_size8.csv  SDRBENCH-Miranda-256x384x384_blocks16_block_size12.csv  SDRBENCH-Miranda-256x384x384_blocks16_block_size16.csv  SDRBENCH-Miranda-256x384x384_blocks16_block_size32.csv  SDRBENCH-Miranda-256x384x384_blocks16_block_size4.csv  SDRBENCH-Miranda-256x384x384_blocks16_block_size6.csv  SDRBENCH-Miranda-256x384x384_blocks16_block_size8.csv  SDRBENCH-Miranda-256x384x384_blocks32_block_size12.csv  SDRBENCH-Miranda-256x384x384_blocks32_block_size16.csv  SDRBENCH-Miranda-256x384x384_blocks32_block_size24.csv  SDRBENCH-Miranda-256x384x384_blocks32_block_size32.csv  SDRBENCH-Miranda-256x384x384_blocks32_block_size4.csv  SDRBENCH-Miranda-256x384x384_blocks32_block_size6.csv  SDRBENCH-Miranda-256x384x384_blocks32_block_size8.csv  SDRBENCH-Miranda-256x384x384_blocks64_block_size12.csv  SDRBENCH-Miranda-256x384x384_blocks64_block_size16.csv  SDRBENCH-Miranda-256x384x384_blocks64_block_size24.csv  SDRBENCH-Miranda-256x384x384_blocks64_block_size32.csv  SDRBENCH-Miranda-256x384x384_blocks64_block_size4.csv  SDRBENCH-Miranda-256x384x384_blocks64_block_size6.csv  SDRBENCH-Miranda-256x384x384_blocks64_block_size8.csv
prediction/: cr_predict.R  data.R  mixreg_arka.R  predict.R  run_prediction.R
related_work/: README.md  block_sample.py  (+10 more)
src/: CMakeLists.txt  Makefile  analysis.cc  arguments.cc  compress.cpp  compress.h  compress_analysis  data.cpp  data.h  deps.jl.julia  export.cc  file_setup.cc  hosvd.jl.julia  jobs_qsub.txt  metrics  metrics.cc  poulos2024.cc  prediction.cc  qentropy.cc  reproducer.cc.cpp  sampling.cc  shared.cc  svd.cc  svd.cpp  timing.cc
src/julia/: deps.jl.julia  svd.jl  svd_cpu.jl  svd_cuda.jl
(+28354 files in other folders)
